# GESTOCK-

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
apps/api/: README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api/db/: README.md
apps/api/db/migrations/: 0001_init_multi_tenant_rls.sql  0002_mock_auth_org_routing_rbac.sql  0003_inventory_articles_catalog.sql  0004_catalog_mdm.sql
apps/api/prisma/: schema.prisma  seed.ts
apps/api/src/: app.module.ts  app.ts  index.ts  main.ts
apps/api/src/config/: configuration.ts  env.ts
apps/api/src/prisma/: prisma.service.ts
apps/web/: .env.local.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
backend/app/: main.py
backend/app/core/: audit.py  modules.py  security.py  tenant.py  tenant_store.py
backend/tests/: test_api.py
docs/: ARCHITECTURE.md  MODULES.md  ROADMAP.md  agent-responsibilities.md  architecture.md  articles-module-audit.md  catalogue-module-audit.md  client-demo-message.md  demo-user-guide.md  functional-boundaries.md  gestock-master-ui-spec.md  mock-auth-routing.md
docs/adr/: 0001-orchestration-multi-agents.md  0002-multi-tenant-rls.md  0003-auth-rbac-abac.md  0004-audit-trail.md  0005-api-contracts.md  0007-stack-backend.md  0008-monorepo-compat-vite.md
src/: main.tsx
src/application/: buildGestockViewModel.ts  simulateLogin.ts
src/domain/: models.ts
src/infrastructure/: seedData.ts
src/presentation/: App.tsx  styles.css
(+115 files in other folders)
