[project]
name = "gestock"
version = "0.1.0"
description = "GESTOCK - Plateforme SaaS cloud de gestion des stocks et supply chain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
